# projeto_tcc

./: .gitignore  README.md  pyproject.toml
Documentação/: validacao-documentos.md  validacao-paragarfos.md
projeto/: main.py  test_file_handlers.py  tui.py  view_manager.py
projeto/controllers/: document_controller.py  paragraph_controller.py
projeto/models/: document.py  paragraph.py
projeto/persistence/mongodb/: document_repository_impl.py  mongodb_config.py  paragraph_repository_impl.py
projeto/services/: document_service.py  ocr_service.py  paragraph_service.py  translation_service.py
projeto/utils/: document_validators.py  exceptions.py  file_handlers.py  paragraph_validator.py  text_utils.py  validators.py
projeto/views/: base_view.py  document_content_view.py  document_delete_view.py  document_detail_view.py  document_insert_view.py  document_list_view.py  document_paragraph_list_view.py  document_update_view.py  main_menu_view.py  paragraph_detail_view.py  translate_paragraph_view.py  tui.py
tests/: teste.py
